--- a/Model_analysis_clean.ipynb
+++ b/Model_analysis_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "09c26c7e",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,7 @@
     "import sys, os\n",
     "from tomotopy import TermWeight\n",
     "import pickle\n",
+    "from IPython.display import display\n",
     "from active_learning_session import LA\n",
     "\n",
     "'''\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5396bdaa",
    "metadata": {},
    "outputs": [
@@ -138,7 +139,7 @@
        "4  : frozen shoulder and lawn mowing: eastern ill...                 sci.med"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "759ddf84",
    "metadata": {},
    "outputs": [],
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bc4fc8fa",
    "metadata": {},
    "outputs": [],
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e50bad66",
    "metadata": {},
    "outputs": [],
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a8a46abc",
    "metadata": {},
    "outputs": [],
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b4ddb973",
    "metadata": {},
    "outputs": [],
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "03a0f47d",
    "metadata": {},
    "outputs": [],
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "fbeb6fe7",
    "metadata": {},
    "outputs": [],
@@ -338,22 +339,7 @@
     "    simple_label_map = {i:unique_labels[i] for i in range(len(unique_labels))}\n",
     "    reverse_label_mapping = {v:k for k, v in simple_label_map.items()}\n",
     "    test_map_labels = [reverse_label_mapping[ele] for ele in test_labels]\n",
-    "#     test_vectorizer_idf = vectorizer.fit_transform(test_texts)\n",
-    "    \n",
-    "#     simple_label_map, model_label_map  = map_labels(model_type, model_collection, actual_labels)\n",
-    "    \n",
-    "#     test_map_labels = []\n",
-    "#     for ele in test_labels:\n",
-    "#         test_map_labels.append(simple_label_map[ele])\n",
-    "    \n",
-    "    \n",
-    "#     reverse_label_mapping = get_reverse_topics(model_type, model_collection)\n",
-    "    \n",
-    "#     print('simple label map for {} is {}'.format(model_type, simple_label_map))\n",
-    "#     print('reverse label map for {} is {}'.format(model_type, reverse_label_mapping))\n",
-    "#     return\n",
-    "    \n",
-    "#     gold_labels = model_collection[model_type].labels\n",
+    "\n",
     "    \n",
     "    session = NAITM(model_collection[model_type].get_texts(), model_topic_distribution[model_type]['document_probas'],  model_topic_distribution[model_type]['doc_topic_probas'], dataframe, 'logreg', input_vectorizer, len(topics), 500)\n",
     "    \n",
@@ -361,8 +347,7 @@
     "    doc_count = 0\n",
     "    doc_recommend_score = []\n",
     "    lst = []\n",
-    "    acc= []\n",
-    "    document_stack, labels_track = None, []\n",
+    "\n",
     "    classifier_acc = []\n",
     "    recommend_ids1, actual_topic1 = [], []\n",
     "\n",
@@ -452,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "5033a6a9",
    "metadata": {},
    "outputs": [],
@@ -573,18 +558,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "5f1eae03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "blockPrint()\n",
+    "# blockPrint()\n",
     "experiment_models = train_models(file_name, 20);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "d10a0069",
    "metadata": {},
    "outputs": [],
@@ -595,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "3ab8cd62",
    "metadata": {},
    "outputs": [],
@@ -606,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "cfa2ce69",
    "metadata": {},
    "outputs": [],
@@ -616,19 +601,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "796b27dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.518"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Check the accuracy rate of sLDA\n",
     "sLDA_pred = predict_labels(experiment_models, 'SLDA')\n",
-    "print(sklearn.metrics.accuracy_score(experiment_models['SLDA'].labels, sLDA_pred))"
+    "display(sklearn.metrics.accuracy_score(experiment_models['SLDA'].labels, sLDA_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "c0bcbf8b",
    "metadata": {},
    "outputs": [],
@@ -638,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "6f3fecd2",
    "metadata": {},
    "outputs": [],
@@ -648,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "4d8cfbef",
    "metadata": {},
    "outputs": [],
@@ -666,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "8730daab",
    "metadata": {},
    "outputs": [],
@@ -678,18 +673,6 @@
     "    LDA_experiment_result, LDA_experiment_time = simulate_experiment(experiment_models, 'LDA', experiment_topic_distribution, df, test_dataset_name, experiment_test_sizes, experiment_vectorizer_idf)\n",
     "    with open('./Model/LDA_model_{}_result.pkl'.format(dataset_name), 'wb+') as outp:\n",
     "        pickle.dump(LDA_experiment_result, outp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "89d2c289",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('SLDA {}'.format(SLDA_experiment_time))\n",
-    "print('LLDA {}'.format(LLDA_experiment_time))\n",
-    "print('LDA {}'.format(LDA_experiment_time))"
    ]
   },
   {
@@ -731,6 +714,16 @@
     "        + theme_minimal()\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "875fb0d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save = False"
    ]
   },
   {
@@ -789,7 +782,8 @@
     "})\n",
     "\n",
     "plot_res = plot(data, 'Number of documents labeled (k)', 'Training Set Accuracy', 'Training Accuracy of LDA, LLDA and SLDA, baseline')\n",
-    "ggsave(plot_res,file='Training_accuracy.png')\n",
+    "if save:\n",
+    "    ggsave(plot_res,file='Training_accuracy.png')\n",
     "plot_res"
    ]
   },
@@ -847,7 +841,8 @@
     "})\n",
     "\n",
     "plot_res1 = plot(data, 'Number of documents labeled (k)', 'Test Set Accuracy', 'Testing Accuracy of LDA, LLDA and SLDA (Test Size 400)')\n",
-    "ggsave(plot_res1,file='Testing_accuracy_400.png')\n",
+    "if save:\n",
+    "    ggsave(plot_res1,file='Testing_accuracy_400.png')\n",
     "plot_res1"
    ]
   },
@@ -900,18 +895,9 @@
     "})\n",
     "\n",
     "plot_res2 = plot(data, 'Number of documents labeled (k)', 'Test Set Accuracy', 'Testing Accuracy of LDA, LLDA and SLDA (Test Size 100)')\n",
-    "ggsave(plot_res2,file='Testing_accuracy_150.png')\n",
+    "if save:\n",
+    "    ggsave(plot_res2,file='Testing_accuracy_150.png')\n",
     "plot_res2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70cdc0b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bs"
    ]
   }
  ],
