--- a/model_concatenate_features.ipynb
+++ b/model_concatenate_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "id": "09c26c7e",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,7 @@
     "import re\n",
     "import pickle\n",
     "from IPython.display import display\n",
+    "from tomotopy.utils import Corpus\n",
     "from active_learning_session import LA\n",
     "\n",
     "\n",
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "id": "b4ddb973",
    "metadata": {},
    "outputs": [],
@@ -292,14 +293,35 @@
     "\n",
     "def concatenate_unseen_vectorizer(model_collection, model_type, document_data, processed_texts):\n",
     "#     documents = document_data.text.values.tolist()\n",
-    "    doc_key_words = [model_collection[model_type].predict_new_doc(doc)[1] for doc in processed_texts]\n",
+    "    # doc_key_words = [model_collection[model_type].predict_new_doc(doc)[1] for doc in processed_texts]\n",
+    "    test_corpus = Corpus()\n",
+    "    for doc in processed_texts:\n",
+    "        test_corpus.add_doc(model_collection[model_type].lda_model.make_doc(doc))\n",
+    "        \n",
+    "    # test_datas = [model_collection[model_type] for doc in pre_processing_texts]\n",
+    "    # model_predictions = model_collection[model_type].predict\n",
     "    \n",
-    "#     print(doc_key_words[1])\n",
+    "    if model_type == 'SLDA':\n",
+    "        inferred, _ = model_collection[model_type].lda_model.infer(test_corpus)\n",
+    "        preds = model_collection[model_type].lda_model.estimate(inferred)\n",
+    "    else:\n",
+    "        preds, _ = model_collection[model_type].lda_model.infer(test_corpus)\n",
+    "\n",
+    "    doc_key_words = []\n",
+    "    for i, scores in enumerate(preds):\n",
+    "        if model_type == 'SLDA':\n",
+    "            topic_num = int(np.argmax(scores))\n",
+    "            topic_words = ' '.join([tup[0] for tup in model_collection[model_type].lda_model.get_topic_words(topic_num, top_n=10)])\n",
+    "            doc_key_words.append(topic_words)\n",
+    "        else:\n",
+    "            topic_num, topic_pct = scores.get_topics(top_n=1)[0]\n",
+    "            topic_words = ' '.join([tup[0] for tup in model_collection[model_type].lda_model.get_topic_words(topic_num, top_n=10)])\n",
+    "            doc_key_words.append(topic_words)\n",
     "    \n",
     "    filtered_texts = [' '.join(ele) for ele in processed_texts]\n",
-    "    doc_words_only = [''.join(ele) for ele in doc_key_words]\n",
+    "    # doc_words_only = [''.join(ele) for ele in doc_key_words]\n",
     "    \n",
-    "    contatenated_texts = [filtered_texts[i] + '' + doc_words_only[i] for i in range(len(filtered_texts))]\n",
+    "    contatenated_texts = [filtered_texts[i] + ' ' + doc_key_words[i] for i in range(len(filtered_texts))]\n",
     "#     print(contatenated_texts[1])\n",
     "    \n",
     "    return contatenated_texts"
@@ -929,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "id": "b5d4f184",
    "metadata": {},
    "outputs": [],
@@ -976,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "id": "19863c51",
    "metadata": {},
    "outputs": [],
@@ -987,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "id": "83490581",
    "metadata": {},
    "outputs": [],
@@ -997,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "id": "6727dc96",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "id": "2dd45522",
    "metadata": {},
    "outputs": [],
@@ -1021,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "id": "ea06ba4f",
    "metadata": {},
    "outputs": [],
