--- a/Model_analysis_clean.ipynb
+++ b/Model_analysis_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "09c26c7e",
    "metadata": {},
    "outputs": [],
@@ -64,17 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "5396bdaa",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -139,7 +132,7 @@
        "4  : frozen shoulder and lawn mowing: eastern ill...                 sci.med"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,13 +146,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "759ddf84",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_models(path_name, num_topics):\n",
-    "    SLDA_model = TopicModel(corpus_path=path_name, model_type='SLDA', min_num_topics= 5, num_iters= 600, load_model=False, save_model=True, load_path='./Model/model_data.pkl', hypers = None)\n",
+    "    SLDA_model = TopicModel(corpus_path=path_name, model_type='SLDA', min_num_topics= 5, num_iters= 600, load_model=True, save_model=True, load_path='./Model/model_data.pkl', hypers = None)\n",
     "    LLDA_model = TopicModel(corpus_path=path_name, model_type='LLDA', min_num_topics= 5, num_iters= 600, load_model=True, save_model=True, load_path='./Model/model_data.pkl', hypers = None)\n",
     "    LDA_model = TopicModel(corpus_path=path_name, model_type='LDA', min_num_topics= 5, num_iters= 600, load_model=True, save_model=True, load_path='./Model/model_data.pkl', hypers = None)\n",
     "    models = dict()\n",
@@ -558,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "5f1eae03",
    "metadata": {},
    "outputs": [],
@@ -601,14 +594,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "796b27dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.056"
+       "0.508"
       ]
      },
      "metadata": {},
